# open-arena

./: .env.example  .gitattributes  .gitignore  .readmeaiignore  AGENTS.md  AUTORESEARCH.md  CLAUDE.md  PREPARE_DATA.md  README.md  REWARDS_BUILDING.md  analyze.py  config.example.yaml  config.yaml  evaluate.py  prepare_data.py  program.py  pyproject.toml
benchmark/forge_gpt54/: README.md  analyze_terminal_bench.py  judge.yaml  run_smoke.sh  verifier.yaml
raw_data/: README.md
resources/conversions/: ToolScale.parquet  data_converter.py
resources/data/: QA.xlsx  ToolScale.xlsx  ToolsExample.xlsx
src/: __init__.py  cli.py  keras_stub.py  main.py  main_cli.py  prompts.default.yaml
src/config/: types.py
src/datasets/: __init__.py  base.py  braintrust_dataset.py  dataset.py  folder_dataset.py  huggingface_dataset.py  langfuse_dataset.py  langfuse_upload.py  langsmith_dataset.py  local_dataset.py  opik_dataset.py  phoenix_dataset.py  types.py
src/datasets/dataset_adapters/: __init__.py  braintrust.py  huggingface.py  langfuse.py  langsmith.py  local.py  local_json_folder.py  mlflow.py  opik.py  phoenix.py  weave.py
src/datasets/item_models/: __init__.py  dataset_model.py  qa_model.py  tool_scale_model.py  tools_example_model.py
src/datasets/loaders/: __init__.py  dataset_loader.py  general_dataset_loader.py  langfuse_loader.py
src/datasets/models/: __init__.py  dataset_model.py  qa_model.py  tool_scale_model.py  tools_example_model.py
src/datasets/readers/: __init__.py  base_reader.py  csv_reader.py  excel_reader.py  utils.py
src/evaluation/: __init__.py  base.py  base_evaluator.py  generic_evaluator.py  langfuse_evaluator.py  types.py
src/evaluation/evaluators/: __init__.py  _verifier_reward.py  judge_panel.py  llm_as_judge.py  llm_as_verifier.py  pairwise_judge.py  pairwise_verifier.py
src/evaluation/methods/: __init__.py  base_method.py  llm_as_judge.py
src/evaluator/: __init__.py  general_evaluator.py
src/execution/: __init__.py  base_executor.py  executor.py  general_executor.py  generic_executor.py  langfuse_executor.py  types.py
src/llms/: __init__.py  agent.py  base.py  langfuse_llm_client.py  llm_client.py  replay.py  simple.py  types.py
src/mcp_server/: __init__.py  mcp_multi_threading.py  mcp_server.py  mcp_sse_bearer.py
src/rewards/: __init__.py  deep_eval.py  judge_panel.py  recursive_language_model_reward.py
src/test/: client.py  llm_client.py
tests/config/: test_types.py
tests/datasets/: test_adapters.py  test_langfuse_upload.py
tests/evaluation/: test_base.py  test_judge_panel.py  test_llm_as_judge.py  test_llm_as_verifier.py
tests/execution/: test_executor.py
wiki/: TODO.md  feature-matrix.md  notes.md
