[project]
name = "open-arena"
version = "0.1.0"
description = "Open Arena evaluation framework for general datasets using Langfuse, LiteLLM, and multi-metric analysis."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.md" }
authors = [
    { name = "Atena Reply" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "langchain",
    "langchain-core",
    "langchain-litellm",
    "langchain-mcp-adapters",
    "arize-phoenix-client",
    "braintrust",
    # Constrain chardet to the range `requests` certifies (>=3.0.2,<6.0.0):
    # without this, polyfile-weave (via weave) pulls chardet 7.x, which
    # triggers a RequestsDependencyWarning on every import of `requests`.
    "chardet>=5.2,<6",
    "langfuse>=3.10.1",
    "langgraph>=0.6.6",
    "langsmith",
    "litellm>=1.80.15",
    "mlflow>=3.0",
    "opik",
    "openai",
    "datasets",
    "jinja2",
    "polars",
    "fastexcel",
    "pydantic>=2",
    "python-dotenv",
    "pyyaml",
    "weave",
]

[project.scripts]
arena = "src.main_cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:pydantic",
]
