[project]
name = "open-arena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arize-phoenix-client>=2.6.0",
    "braintrust>=0.18.0",
    "click>=8.1.8",
    "datasets>=4.8.5",
    "keras-tuner>=1.4.8",
    "langfuse>=4.5.1",
    "langsmith>=0.7.38",
    "opik>=2.0.20",
    "pyarrow>=23.0.1",
    "synalinks>=0.8.5",
]

[project.optional-dependencies]
# `deep_eval` reward — wraps `deepeval.metrics` so any DeepEval metric
# (G-Eval, AnswerRelevancy, Hallucination, …) can be selected from YAML.
# Install with `uv sync --extra deepeval`.
deepeval = ["deepeval>=2.0.0"]

[project.scripts]
arena = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
